prettier is still running?

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -16,9 +16,13 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
     },
   ]}
 >
-  - Install `@clerk/nextjs` - Set up your environment keys - Wrap your Next.js
-  app in `<ClerkProvider />` - Limit access to authenticated users - Embed the `
-  <UserButton />`
+
+- Install `@clerk/nextjs`
+- Set up your environment keys
+- Wrap your Next.js app in `<ClerkProvider />`
+- Limit access to authenticated users
+- Embed the `<UserButton />`
+
 </TutorialHero>
 
 <Steps>
