--- a/docs/references/backend/invitations/create-invitation.mdx
+++ b/docs/references/backend/invitations/create-invitation.mdx
@@ -22,7 +22,7 @@ const invitation = await clerkClient.invitations.createInvitation({
 });
 ```
 
-# `CreateParams`
+## `CreateParams`
 
 | Name | Type | Description |
 | --- | --- | --- |
