--- a/docs/references/backend/organization/create-organization.mdx
+++ b/docs/references/backend/organization/create-organization.mdx
@@ -1,6 +1,6 @@
 ---
 title: createOrganization()
-decsription: Creates an organization.
+description: Creates an organization.
 ---
 
 # `createOrganization()`
