--- a/docs/organizations/updating-organizations.mdx
+++ b/docs/organizations/updating-organizations.mdx
@@ -7,7 +7,7 @@ description: Learn how to update an organization in your Clerk instance.
 
 Administrators have the ability to update an organization. Currently, Clerk supports updating an organization name. 
 
-The organization name can be updated by calling the [`update`] method on the `Organization` object. In React and Next.js applications, you can use the [`useOrganization()`](/docs/references/react/use-organization) hook to directly access and update the `Organization` object.
+The organization name can be updated by calling the [`update`](/docs/references/javascript/organization/organization#update) method on the `Organization` object. In React and Next.js applications, you can use the [`useOrganization()`](/docs/references/react/use-organization) hook to directly access and update the `Organization` object.
 
 You can also use the `updateOrganization` method, which can be accessed from the [Backend API](/docs/references/backend/organization/update-organization).
 
