incorporating Sok's feedback

--- a/docs/concepts/how-clerk-works.mdx
+++ b/docs/concepts/how-clerk-works.mdx
@@ -8,10 +8,10 @@ type: conceptual
 
 ## Development and production instances
 
-Production instances are used for production, pre-production, or staging environments with fixed domains. Production instances offer the strongest security and performance guarantees. Development instances contain certain trade-offs meant to support ease of active development. For more details on the differences, read the [Instances / Environments](/docs/deployments/environments) doc.
+Clerk provices both development and production environments for your app. Production instances are used for production, pre-production, or staging environments with fixed domains. Production instances offer the strongest security and performance guarantees. Development instances contain certain trade-offs meant to support ease of active development. 
 
 <Callout type="warning">
-Never use a development instance in a production environment. Development instances don’t have the same strong security guarantees.
+Never use a development instance in a production environment. Development instances don’t have strong security guarantees.
 </Callout>
 
 ## Main objects
@@ -20,7 +20,7 @@ Clerk uses five main objects:
 
 ### [Client](/docs/references/javascript/client#client)
 
-A client represents the current device or software accessing an application such as your web browser, native application, Chrome Extension, or Electron app.
+A client represents the current device or software accessing an application such as your web browser, native application for Android or iOS, Chrome Extension, or Electron app.
 
 ### [Session](/docs/references/javascript/session)
 
@@ -52,8 +52,8 @@ Clerk's Frontend API is responsible for maintaining the authentication state of 
 
 Clerk’s Frontend API uses two cookies for session management in production instances:
 
-* `__client` cookie: a long-lived session that is used to keep the the session JWT fresh by interacting with the Frontend API
-* `__session` cookie: a short-lived session JWT to validate requests 
+* `__client` cookie: a long-lived session that is used to keep the the session JWT fresh by interacting with the Frontend API.
+* `__session` cookie: a short-lived session JWT to validate requests on your application or your API. 
 
 #### The `__client` cookie
 
@@ -61,9 +61,9 @@ This cookie is set on Clerk Frontend API (for example `https://clerk.<example.co
 
 #### The `__session` cookie
 
-This cookie is set on the host application that is secured by Clerk (for example `https://dashboard.<example.com>`). It’s a JS cookie, it’s secure, and contains a short-lived session JWT that lasts 60 seconds. This JWT contains the current session, user and organization identifiers and must be sent to the application API to authenticate API requests. In SSR, the `__session` cookie travels automatically to the server. ClerkJS ensures that the `__session` cookie is automatically refreshed in Client Side Rendering (CSR) and Server Side Rendering (SSR).
+This cookie is set on the host application that is secured by Clerk (for example `https://dashboard.<example.com>`). It’s a JS cookie, it’s secure, and contains a short-lived session JWT that lasts 60 seconds. This JWT contains the current session, user, and organization identifiers and must be sent to the application API to authenticate API requests. In SSR, the `__session` cookie travels automatically to the server. ClerkJS ensures that the `__session` cookie is automatically refreshed in Client Side Rendering (CSR) and Server Side Rendering (SSR), ensuring a fresh session is always available.
 
-If a `__session` cookie is expired on a request to an application’s backend, the SDK doesn’t know if the session has ended, or if a new short-lived JWT needs to be issued. When an SDK gets into this state, it triggers Clerk's client handshake.
+However, if a `__session` cookie is expired on a request to an application’s backend, the SDK doesn’t know if the session has ended, or if a new short-lived JWT needs to be issued. When an SDK gets into this state, it triggers Clerk's client handshake.
 
 ### The client handshake
 
@@ -99,7 +99,7 @@ It's not recommended to use Client piggybacking because of the following issues:
 
 Clerk offers a seamless authentication solution for non-standard web browser environments such as React Native applications, Chrome Extensions, and hybrid apps in platforms like Capacitor.js or Electron.
 
-These platforms treat cookies differently than web browsers. As a result, ClerkJS should use the HTTP Authorization header instead of the `__client` cookie for secure communication with the Clerk Frontend API. To get the initial `__client` JWT, set the HTTP Authorization header to an empty string value `“”` and Clerk Frontend API will return the client JWT in the response. To achieve session persistence, the `__client` JWT should be stored in a secure storage provided by each platform and then it should be injected into every Clerk Frontend API request. 
+These platforms treat cookies differently than web browsers. As a result, ClerkJS should use the HTTP Authorization header instead of the `__client` cookie for secure communication with the Clerk Frontend API. To achieve session persistence, the `__client` JWT should be stored in a secure storage provided by each platform and then it should be injected into every Clerk Frontend API request. 
 
 ## Clerk Backend API (BAPI)
 
