Adding billing account errors

--- a/docs/errors/billing.mdx
+++ b/docs/errors/billing.mdx
@@ -11,7 +11,7 @@ type: reference
 ```json
 {
     shortMessage: "Checkout is still processing",
-    longMessage:  fmt.Sprintf("Checkout is still processing for application ID <appID>"),
+    longMessage:  "Checkout is still processing for application ID <appID>",
     code:         checkout_locked_code,
 }
 ```
@@ -21,7 +21,7 @@ type: reference
 ```json
 {
     shortMessage: "Checkout session ID mismatch",
-    longMessage:  "Application ID <APPID>> has no matching checkout session ID <SESSID>",
+    longMessage:  "Application ID <APPID> has no matching checkout session ID <SESSID>",
     code:         checkout_session_mismatch_code,
 }
 ```
