--- a/docs/errors/overview.mdx
+++ b/docs/errors/overview.mdx
@@ -59,3 +59,9 @@ description: A breakdown of all Clerk's errors.
 * [`CheckoutSessionMismatch`](/docs/errors/billing#checkout-session-mismatch)
 * [`UnsupportedSubscriptionPlanFeatures`](/docs/errors/billing#unsupported-subscription-plan-features)
 * [`InvalidSubscriptionPlanSwitch`](/docs/errors/billing#invalid-subscription-plan-switch)
+
+## [Billing accounts](/docs/errors/billing-accounts)
+
+* [`BillingAccountNotFound`](/docs/errors/billing-accounts#billing-account-not-found)
+* [`BillingAccountNotAccessible`](/docs/errors/billing-accounts#billing-account-not-accessible)
+* [`BillingAccountWithoutCustomerID`](/docs/errors/billing-accounts#billing-account-without-customer-id)
