adding blocklist identifiers errors

--- a/docs/errors/overview.mdx
+++ b/docs/errors/overview.mdx
@@ -65,3 +65,8 @@ description: A breakdown of all Clerk's errors.
 * [`BillingAccountNotFound`](/docs/errors/billing-accounts#billing-account-not-found)
 * [`BillingAccountNotAccessible`](/docs/errors/billing-accounts#billing-account-not-accessible)
 * [`BillingAccountWithoutCustomerID`](/docs/errors/billing-accounts#billing-account-without-customer-id)
+
+## [Blocklist identifiers](/docs/errors/blocklist-identifiers)
+
+* [`DuplicateBlocklistIdentifier`](/docs/errors/blocklist-identifiers#duplicate-blocklist-identifier)
+* [`BlocklistIdentifierNotFound`](/docs/errors/blocklist-identifiers#blocklist-identifier-not-found)
