adding clients errors

--- a/docs/errors/overview.mdx
+++ b/docs/errors/overview.mdx
@@ -70,3 +70,8 @@ description: A breakdown of all Clerk's errors.
 
 * [`DuplicateBlocklistIdentifier`](/docs/errors/blocklist-identifiers#duplicate-blocklist-identifier)
 * [`BlocklistIdentifierNotFound`](/docs/errors/blocklist-identifiers#blocklist-identifier-not-found)
+
+## [Clients](/docs/errors/clients)
+
+* [`ClientNotFound`](/docs/errors/clients#client-not-found)
+* [`ClientNotFoundInRequest`](/docs/errors/clients#client-not-found-in-request)
