Removing references to endpoint

--- a/docs/concepts/client-handshake.mdx
+++ b/docs/concepts/client-handshake.mdx
@@ -46,12 +46,8 @@ A handshake is only triggered If a request is determined to be a document reques
 
 The handshake flow is composed of two main pieces:
 
-1. The FAPI [`/client/handshake` endpoint](https://github.com/clerk/clerk_go/blob/main/api/fapi/v1/router/router.go#L223)
-2. The [`@clerk/backend` `authenticateRequest()` method](https://github.com/clerk/javascript/blob/main/packages/backend/src/tokens/request.ts#L74)
-
-### `/client/handshake` endpoint
-
-The endpoint should always result in a redirect back to the provided `redirect_url`. Along with the response, a **[handshake payload](#handshake-payload)** is returned. The handshake endpoint also handles multi-domain syncing between a satellite and a primary domain. If possible, the handshake will return a refreshed session token, as well as updated dev browser (`__clerk_db_jwt`) and Client UAT (`__client_uat`) cookies.
+1. The FAPI `/client/handshake` endpoint
+2. The `@clerk/backend` `authenticateRequest()` method
 
 ### `@clerk/backend` method
 
