Adding cookie errors

--- a/docs/errors/cookie.mdx
+++ b/docs/errors/cookie.mdx
@@ -1,10 +1,10 @@
 ---
-title: Comms
-description: An index of Clerk errors related to comms.
+title: Cookie
+description: An index of Clerk errors related to cookie.
 type: reference
 ---
 
-# Comms errors index
+# Cookie errors index
 
 ## `IdentificationNotFound`
 
