--- a/docs/errors/overview.mdx
+++ b/docs/errors/overview.mdx
@@ -75,3 +75,19 @@ description: A breakdown of all Clerk's errors.
 
 * [`ClientNotFound`](/docs/errors/clients#client-not-found)
 * [`ClientNotFoundInRequest`](/docs/errors/clients#client-not-found-in-request)
+
+## [Comms](/docs/errors/comms)
+
+* [`IdentificationNotFound`](/docs/errors/comms#identification-not-found)
+* [`LastIdentificationDeletionFailed`](/docs/errors/comms#last-identification-deletion-failed)
+* [`LastRequiredIdentificationDeletionFailed`](/docs/errors/comms#last-required-identification-deletion-failed)
+* [`LastIdentificationSetFor2FAFailed`](/docs/errors/comms#last-identification-set-for2-fa-failed)
+* [`LastIdentificaUpdateSecondFactorUnverifiedtionSetFor2FAFailed`](/docs/errors/comms#update-second-factor-unverified)
+
+## [Cookie](/docs/errors/cookie)
+
+* [`IdentificationNotFound`](/docs/errors/cookie#identification-not-found)
+* [`LastIdentificationDeletionFailed`](/docs/errors/cookie#last-identification-deletion-failed)
+* [`LastRequiredIdentificationDeletionFailed`](/docs/errors/cookie#last-required-identification-deletion-failed)
+* [`LastIdentificationSetFor2FAFailed`](/docs/errors/cookie#last-identification-set-for2-fa-failed)
+* [`UpdateSecondFactorUnverified`](/docs/errors/cookie#update-second-factor-unverified)
