adding db errors

--- a/docs/errors/overview.mdx
+++ b/docs/errors/overview.mdx
@@ -86,8 +86,10 @@ description: A breakdown of all Clerk's errors.
 
 ## [Cookie](/docs/errors/cookie)
 
-* [`IdentificationNotFound`](/docs/errors/cookie#identification-not-found)
-* [`LastIdentificationDeletionFailed`](/docs/errors/cookie#last-identification-deletion-failed)
-* [`LastRequiredIdentificationDeletionFailed`](/docs/errors/cookie#last-required-identification-deletion-failed)
-* [`LastIdentificationSetFor2FAFailed`](/docs/errors/cookie#last-identification-set-for2-fa-failed)
-* [`UpdateSecondFactorUnverified`](/docs/errors/cookie#update-second-factor-unverified)
+* [`MissingClaims`](/docs/errors/cookie#missing-claims)
+* [`InvalidCookie`](/docs/errors/cookie#invalid-cookie)
+* [`InvalidRotatingToken`](/docs/errors/cookie#linvalid-rotating-token)
+
+## [DB](/docs/errors/db)
+
+* [`DuplicateAllowlistIdentifier`](/docs/errors/db#duplicate-allowlist-identifier)
