--- a/docs/errors/cookie.mdx
+++ b/docs/errors/cookie.mdx
@@ -6,56 +6,36 @@ type: reference
 
 # Cookie errors index
 
-## `IdentificationNotFound`
+## `MissingClaims`
 
-Signifies an error when comm is not found.
+Signifies an error when token is missing claim.
 
 ```json
 {
-    shortMessage: "Resource not found",
-    longMessage:  "No resource was found for ID <resourceID>",
-    code:         resource_not_found_code,
+    shortMessage: invalidCookieMessage,
+    longMessage:  "The token is missing the following claims: <claims>",
+    code:         cookie_invalid_code,
 }
 ```
 
-## `LastIdentificationDeletionFailed`
-
-Signifies an error when trying to delete the last identification associated with a user.
+## `InvalidCookie`
+Signifies an error when cookie is invalid.
 
 ```json
 {
-    shortMessage: "Deletion failed",
-    longMessage:  "You cannot delete your last identification.",
-    code:         identification_deletion_failed_code,
+    shortMessage: "The provided cookie is invalid.",
+    code:         cookie_invalid_code,
 }
 ```
 
-## `LastRequiredIdentificationDeletionFailed`
+## `InvalidRotatingToken`
+
+Signifies an error when rotating token does not match the client's rotating token.
 
 ```json
 {
-    shortMessage: "Deleting your last <sanitizedIdentType> is prohibited",
-    longMessage:  "You are required to maintain at least one <sanitizedIdentType> in your account at all times",
-    code:         last_required_identification_deletion_failed_code,
-}
-```
-
-## `LastIdentificationSetFor2FAFailed`
-
-```json
-{
-    shortMessage: "Update failed",
-    longMessage:  "You cannot set your last identification as second factor.",
-    code:         identification_set_for2_f_a_failed_code,
-}
-```
-
-## `UpdateSecondFactorUnverified`
-
-```json
-{
-    shortMessage: "Update failed",
-    longMessage:  "Cannot update second factor attributes for unverified identification",
-    code:         identification_update_second_factor_unverified,
+    shortMessage: invalidCookieMessage,
+    longMessage:  "The client's rotating key does not match the given one <token>",
+    code:         cookie_invalid_code,
 }
 ```
