add deprecation errors

--- a/docs/errors/db.mdx
+++ b/docs/errors/db.mdx
@@ -8,7 +8,7 @@ type: reference
 
 ## `DuplicateAllowlistIdentifier`
 
-```json{
+```json
 {
     shortMessage: "duplicate allowlist identifier",
     longMessage:  "the identifier <identifier> already exists",
