--- a/docs/errors/overview.mdx
+++ b/docs/errors/overview.mdx
@@ -93,3 +93,7 @@ description: A breakdown of all Clerk's errors.
 ## [DB](/docs/errors/db)
 
 * [`DuplicateAllowlistIdentifier`](/docs/errors/db#duplicate-allowlist-identifier)
+
+## [Deprecation](/docs/errors/deprecation)
+
+* [`BAPIEndpointDeprecated`](/docs/errors/deprecation#bapi-endpoint-deprecated)
