adding domains errors

--- a/docs/errors/overview.mdx
+++ b/docs/errors/overview.mdx
@@ -97,3 +97,13 @@ description: A breakdown of all Clerk's errors.
 ## [Deprecation](/docs/errors/deprecation)
 
 * [`BAPIEndpointDeprecated`](/docs/errors/deprecation#bapi-endpoint-deprecated)
+
+## [Domains](/docs/errors/domains)
+
+* [`DomainNotFound`](/docs/errors/domains#domain-not-found)
+* [`DomainUpdateForbidden`](/docs/errors/domains#domain-update-forbidden)
+* [`OperationNotAllowedOnSatelliteDomain`](/docs/errors/domains#operation-not-allowed-on-satellite-domain)
+* [`OperationNotAllowedOnPrimaryDomain`](/docs/errors/domains#operation-not-allowed-on-primary-domain)
+* [`SyncNonceAlreadyConsumed`](/docs/errors/domains#sync-nonce-already-consumed)
+* [`PrimaryDomainAlreadyExists`](/docs/errors/domains#primary-domain-already-exists)
+* [`InvalidProxyConfiguration`](/docs/errors/domains#invalid-proxy-configuration)
