add entitlements errors

--- a/docs/errors/domains.mdx
+++ b/docs/errors/domains.mdx
@@ -76,7 +76,7 @@ Signifies an error when a new domain is added as primary when there is already o
 }
 ```
 
-## InvalidProxyConfiguration
+## `InvalidProxyConfiguration`
 
 ```json
 {
