--- a/docs/errors/overview.mdx
+++ b/docs/errors/overview.mdx
@@ -107,3 +107,8 @@ description: A breakdown of all Clerk's errors.
 * [`SyncNonceAlreadyConsumed`](/docs/errors/domains#sync-nonce-already-consumed)
 * [`PrimaryDomainAlreadyExists`](/docs/errors/domains#primary-domain-already-exists)
 * [`InvalidProxyConfiguration`](/docs/errors/domains#invalid-proxy-configuration)
+
+## [Entitlements](/docs/errors/entitlements)
+
+* [`FormInvalidEntitlementKey`](/docs/errors/entitlements#form-invalid-entitlement-key)
+* [`EntitlementAlreadyAssociatedWithProduct`](/docs/errors/entitlements#entitlement-already-associated-with-product)
