Add features errors

--- a/docs/errors/overview.mdx
+++ b/docs/errors/overview.mdx
@@ -112,3 +112,9 @@ description: A breakdown of all Clerk's errors.
 
 * [`FormInvalidEntitlementKey`](/docs/errors/entitlements#form-invalid-entitlement-key)
 * [`EntitlementAlreadyAssociatedWithProduct`](/docs/errors/entitlements#entitlement-already-associated-with-product)
+
+## [Features](/docs/errors/features)
+
+* [`FeatureNotEnabled`](/docs/errors/features#feature-not-enabled)
+* [`NotImplemented`](/docs/errors/features#not-implemented)
+* [`FeatureRequiresPSU`](/docs/errors/features#feature-requires-psu)
