Add features errors

--- a/docs/errors/features.mdx
+++ b/docs/errors/features.mdx
@@ -4,7 +4,7 @@ description: An index of Clerk errors related to features.
 type: reference
 ---
 
-# Entitlements features index
+# Features errors index
 
 ## `FeatureNotEnabled`
 
