--- a/docs/references/nodejs/token-verification.mdx
+++ b/docs/references/nodejs/token-verification.mdx
@@ -29,7 +29,7 @@ import clerkClient from '@clerk/clerk-sdk-node/instance';
 const clerk = clerkClient({ jwtKey: 'my_clerk_public_key' });
 ```
 
-## Validate the authorized Programmatically of a session token
+## Validate the authorized party of a session token
 
 Clerk's JWT session token contains the `azp` claim, which equals the Origin of the request during token generation. You can provide the middlewares with a list of allowlisted origins to verify against, to protect your application of the subdomain cookie leaking attack. You can find an example below:
 
