--- a/docs/concepts/client-handshake.mdx
+++ b/docs/concepts/client-handshake.mdx
@@ -1,6 +1,6 @@
 ---
 title: Client handshake
-description: The Client Handshake is a mechanism that is used to resolve a request’s authentication state from “unknown” to definitively signed in or signed out.
+description: The client handshake is a mechanism that is used to resolve a request’s authentication state from “unknown” to definitively signed in or signed out.
 type: conceptual
 ---
 
