--- a/docs/concepts/client-handshake.mdx
+++ b/docs/concepts/client-handshake.mdx
@@ -22,7 +22,7 @@ The handshake mechanism operates by way of a redirect from the host application 
 4. The handshake endpoint gets information about the current session and returns a handshake payload. The encoded handshake payload contains a list of `Set-Cookie` header directives to be passed along with the final response
     1. If the session is active, a fresh session JWT cookie is returned
     2. If the session is inactive, the session JWT cookie is wiped and the request will be treated as signed out
-5. The handshake endpoint redirects back to the host application along with the handshake payload, encoded either in the URL (development) or as a cookie (production)
+5. The handshake endpoint redirects back to the host application along with the handshake payload, encoded either in the URL (development instances) or as a cookie (production instances).
 6. The handshake payload is parsed and `Set-Cookie` headers are set on the response
 7. If an updated session JWT is returned, the JWT is verified
     1. If successful, the request is treated as signed in
