--- a/docs/concepts/client-handshake.mdx
+++ b/docs/concepts/client-handshake.mdx
@@ -16,7 +16,7 @@ The resolution is fast and shouldn't be noticeable to the end user.
 
 The handshake mechanism operates by way of a redirect from the host application to a FAPI endpoint:
 
-1. Request is made to an application using Clerk
+1. A request is made to an application using Clerk.
 2. Clerk SDK determines the authentication state of the request (`signed-in`, `signed-out`, or `handshake`).
 3. If authentication state is `handshake`, Clerk responds with a 307 redirect to the handshake endpoint: `fapi/v1/client/handshake`
 4. The handshake endpoint gets information about the current session and returns a handshake payload. The encoded handshake payload contains a list of `Set-Cookie` header directives to be passed along with the final response
