--- a/docs/concepts/client-handshake.mdx
+++ b/docs/concepts/client-handshake.mdx
@@ -18,7 +18,7 @@ The handshake mechanism operates by way of a redirect from the host application 
 
 1. A request is made to an application using Clerk.
 2. Clerk SDK determines the authentication state of the request (`signed-in`, `signed-out`, or `handshake`).
-3. If authentication state is `handshake`, Clerk responds with a 307 redirect to the handshake endpoint: `fapi/v1/client/handshake`
+3. If the authentication state is `handshake`, Clerk responds with a 307 redirect to the handshake endpoint: `fapi/v1/client/handshake`.
 4. The handshake endpoint gets information about the current session and returns a handshake payload. The encoded handshake payload contains a list of `Set-Cookie` header directives to be passed along with the final response
     1. If the session is active, a fresh session JWT cookie is returned
     2. If the session is inactive, the session JWT cookie is wiped and the request will be treated as signed out
