--- a/docs/concepts/client-handshake.mdx
+++ b/docs/concepts/client-handshake.mdx
@@ -24,9 +24,7 @@ The handshake mechanism operates by way of a redirect from the host application 
     - If the session is inactive, the session JWT cookie is wiped and the request will be treated as signed out.
 5. The handshake endpoint redirects back to the host application along with the handshake payload, encoded either in the URL (development instances) or as a cookie (production instances).
 6. The handshake payload is parsed and `Set-Cookie` headers are set on the response.
-7. If an updated session JWT is returned, the JWT is verified
-    1. If successful, the request is treated as signed in
-8. If an updated session JWT is not returned, the request is treated as signed out
+7. If an updated session JWT is returned, the JWT is verified and then, if verification is successful, the request is treated as signed in. If an updated session JWT is not returned, the request is treated as signed out.
 
 ## Scenarios that trigger a handshake
 
