--- a/docs/concepts/client-handshake.mdx
+++ b/docs/concepts/client-handshake.mdx
@@ -29,7 +29,7 @@ The handshake mechanism operates by way of a redirect from the host application 
 ## Scenarios that trigger a handshake
 
 <Callout type="warning">
-A handshake is only triggered If a request is determined to be a document request (detected by the presence of the `Sec-Fetch-Dest: document` header, or `Accept: text/html`). Otherwise, the request is treated as `signed-out`.
+A handshake is only triggered if a request is determined to be a document request (detected by the presence of the `Sec-Fetch-Dest: document` header, or `Accept: text/html`). Otherwise, the request is treated as `signed-out`.
 </Callout>
 
 1. Development instance and a dev browser is detected in URL **[URL-based session sync]**
