--- a/docs/concepts/how-clerk-works.mdx
+++ b/docs/concepts/how-clerk-works.mdx
@@ -28,7 +28,7 @@ A session is a secure representation of the authentication state of the current 
 
 ### [User](/docs/users/overview)
 
-A user represents the current user of the session. The object holds all the basic user information e.g. name, email addresses, phone numbers, etc… including their public, private, and unsafe metadata.
+A user represents the current user of the session. The object holds all the basic user information such as the user's name, email addresses, and phone numbers, and including their public, private, and unsafe metadata.
 
 ### [Organization](/docs/organizations/roles-permissions)
 
