--- a/docs/concepts/how-clerk-works.mdx
+++ b/docs/concepts/how-clerk-works.mdx
@@ -44,7 +44,7 @@ Every Clerk development and production instance has a dedicated [Frontend API](h
 
 Clerk assigns a unique random API URL such as `https://delicate-wahoo-73.accounts.dev/sign-in` to each development instance. For production instances, the Frontend API lives at `https://clerk.[your-domain.com]`.
 
-### How it works
+### How Clerk's Frontend API works
 
 Clerk's Frontend API is responsible for maintaining the authentication state of the current client (browser or native application). Based on the authentication's state (`signed-in`, `signed-out`, `handshake`) it mints a short-lived session [JSON Web Token (JWT)](/docs/backend-requests/making/jwt-templates) for the current user and session to be used by the host application that is secured by Clerk. The session JWT is stored in a cookie or can be retrieved at any time via the [`getToken()`](/docs/references/javascript/session#get-token) method.
 
