--- a/docs/concepts/how-clerk-works.mdx
+++ b/docs/concepts/how-clerk-works.mdx
@@ -71,7 +71,7 @@ Clerk uses a client handshake mechanism to resolve a request’s authentication 
 
 With this handshake, Clerk can resolve authentication state on the backend and ensure the request is properly handled as signed in or out, instead of being in a potentially unknown state. The handshake flow relies on redirects to exchange session information between FAPI and the application, ensuring the resolution of unknown authentication states minimizes performance impact and behaves consistently across different framework and language implementations.
 
-Learn more about [how Clerk's client handshake works in this deep dive](/docs/concepts/client-handshake).
+Learn more about [how Clerk's client handshake works.](/docs/concepts/client-handshake).
 
 ### Client piggybacking
 
