--- a/docs/concepts/how-clerk-works.mdx
+++ b/docs/concepts/how-clerk-works.mdx
@@ -75,7 +75,7 @@ Learn more about [how Clerk's client handshake works.](/docs/concepts/client-han
 
 ### Client piggybacking
 
-Every Frontend API request except from `/v1/client/sessions/:id/tokens` that refreshes the Clerk session tokens, returns a response payload that contains two top level keys
+Every Frontend API request returns a response payload that contains two top level keys: 
 
 ```json
 {
