--- a/docs/concepts/how-clerk-works.mdx
+++ b/docs/concepts/how-clerk-works.mdx
@@ -79,8 +79,8 @@ Every Frontend API request returns a response payload that contains two top leve
 
 ```json
 {
-   client: ...,
-   response: ...
+   "client": ...,
+   "response": ...
 }
 ```
 
