--- a/docs/concepts/how-clerk-works.mdx
+++ b/docs/concepts/how-clerk-works.mdx
@@ -96,7 +96,7 @@ This is effectively the necessary frontend state for ClerkJS and powers the JS S
 It's not recommended to use Client piggybacking because of the following issues:
 
 1. It’s a very large chunk of a tree-like state and doesn’t change often.
-1. It’s hard to compute on the backend as it requires a lot of data from the database. The computation takes place on every request adding a significant overhead.
+1. It’s hard to compute on the backend as it requires a lot of data from the database. The computation takes place on every request, adding a significant overhead.
 1. It’s best effort.
 1. It’s not a two-way communication channel.
 
