update sidenav icon; add meta desc for how clerk works

--- a/docs/concepts/how-clerk-works.mdx
+++ b/docs/concepts/how-clerk-works.mdx
@@ -1,6 +1,6 @@
 ---
 title: How Clerk works
-description: 
+description: Learn about the main concepts and objects that power Clerk's powerful authentication and user management system.
 type: conceptual
 ---
 
