--- a/docs/organizations/verify-user-permissions.mdx
+++ b/docs/organizations/verify-user-permissions.mdx
@@ -3,6 +3,12 @@ title: Verify the active user’s permissions
 description: A collection of utility functions and components in order to allow developers to perform authorization checks.
 ---
 
+<Callout type="info">
+  The following authorization checks are predicated on an Organization being selected. Without this, they will likely
+  always evaluate to false by default. Our built-in [`<OrganizationSwitcher/>`](docs/components/organization/organization-switcher)
+  is currently the only way to change this context.
+</Callout>
+
 # Verify the active user’s permissions
 
 Clerk provides two kinds of helpers for authorization:
