--- a/docs/references/backend/client/get-client.mdx
+++ b/docs/references/backend/client/get-client.mdx
@@ -10,7 +10,7 @@ Retrieves a single client by its ID, if the ID is valid. Throws an error otherwi
 ```tsx
 const clientID = 'my-client-id';
 
-const client = await clerkClient.clients.getClient(clientId);
+const client = await clerkClient.clients.getClient(clientID);
 ```
 
 ## Required parameters
