--- a/docs/organizations/verify-user-permissions.mdx
+++ b/docs/organizations/verify-user-permissions.mdx
@@ -5,8 +5,7 @@ description: A collection of utility functions and components in order to allow 
 
 <Callout type="info">
   The following authorization checks are predicated on an Organization being selected. Without this, they will likely
-  always evaluate to false by default. Our built-in [`<OrganizationSwitcher/>`](docs/components/organization/organization-switcher)
-  is currently the only way to change this context.
+  always evaluate to false by default. Our built-in [`<OrganizationSwitcher/>`](docs/components/organization/organization-switcher) component and `useClerk().setActive({ organization: <orgId> })` method are two available options to handle this.
 </Callout>
 
 # Verify the active user’s permissions
