--- a/docs/organizations/verify-user-permissions.mdx
+++ b/docs/organizations/verify-user-permissions.mdx
@@ -5,9 +5,8 @@ description: A collection of utility functions and components in order to allow 
 
 <Callout type="info">
   The following authorization checks are predicated on an Organization being selected. Without this, they will likely
-  always evaluate to false by default. Our built-in [`<OrganizationSwitcher/>`](docs/components/organization/organization-switcher) component and `useClerk().setActive({ organization: <orgId> })` method are two available options to handle this.
+  always evaluate to false by default. Our built-in [`<OrganizationSwitcher/>`](docs/components/organization/organization-switcher) component is available as a styled option to handle this. For a headless option, our `useClerk()` and `useOrganizationList()` hooks return a `setActive({ organization: <orgId> })` method which can be used in custom components.
 </Callout>
-
 # Verify the active user’s permissions
 
 Clerk provides two kinds of helpers for authorization:
