--- a/docs/references/backend/client/get-client.mdx
+++ b/docs/references/backend/client/get-client.mdx
@@ -8,9 +8,9 @@ description: Retrieves a single client by its ID, if the ID is valid. Throws an 
 Retrieves a single client by its ID, if the ID is valid. Throws an error otherwise.
 
 ```tsx
-const clientID = 'my-client-id';
+const clientId = 'my-client-id';
 
-const client = await clerkClient.clients.getClient(clientID);
+const client = await clerkClient.clients.getClient(clientId);
 ```
 
 ## Required parameters
