Fixed Spelling Mistake in Clerk Docs - RBAC Section

--- a/docs/guides/basic-rbac.mdx
+++ b/docs/guides/basic-rbac.mdx
@@ -221,7 +221,7 @@ export const SearchUsers = () => {
 };
 ```
 
-With the server action and the search form in place, you'll refactor the server component for the `app/admin/dashboard` route. It will now check if a search paramater has been added to the URL by the search form, and if there is a search parameter present, it will search for users that match the entered term. If an array of one or more users is returned, then the component will render a list of users using their first and last name, primary eamil address, current role and 'Make Admin' and 'Make Moderator' buttons. The buttons include hidden inputs for the user ID and the role, and they use the `setRole()` server action to update the role for the user.
+With the server action and the search form in place, you'll refactor the server component for the `app/admin/dashboard` route. It will now check if a search parameter has been added to the URL by the search form, and if there is a search parameter present, it will search for users that match the entered term. If an array of one or more users is returned, then the component will render a list of users using their first and last name, primary email address, current role, and 'Make Admin' and 'Make Moderator' buttons. The buttons include hidden inputs for the user ID and the role, and they use the `setRole()` server action to update the role for the user.
 
 ```ts filename="src/app/admin/dashboard/page.tsx" {3-5, 7-9, 14, 16, 23, 25-55}
 import { redirect } from "next/navigation";
