Verified domains maximum create value

--- a/docs/organizations/verified-domains.mdx
+++ b/docs/organizations/verified-domains.mdx
@@ -7,9 +7,11 @@ description: Learn about how to use verified domains for organizations.
 
 Domains can be added and verified under an organization by an administrator. In order to enable this feature, go to the Clerk Dashboard and navigate to the **[Organizations Settings](https://dashboard.clerk.com/last-active?path=organizations-settings)** page. Toggle on **Verified domains**. The only parameter needed to create an organization domain is the `name`.
 
-Domains can be verified through an email verfication code sent to an email that matches the domain. If the administrator adding the domain already has a verified email using that domain in their account, the domain will be automatically verified.
+Domains can be verified through an email verification code sent to an email that matches the domain. If the administrator adding the domain already has a verified email using that domain in their account, the domain will be automatically verified.
 
 An application instance may only have one verified domain of the same name, and an organization may only have one domain of the same name (verified or unverified).
+
+You can create up to 10 domains per organization to meet your needs. If you need more than 10 domains, reach out to support@clerk.dev.
 
 ## Default role
 
