feat: Add it to manifest.json

--- a/docs/guides/force-organizations.mdx
+++ b/docs/guides/force-organizations.mdx
@@ -15,9 +15,9 @@ description: Learn how to avoid personal account and force organizations in your
         }
     ]}
 >
-    - Remove Personal Account from UI components
-    - Set an active organization
-    - Limit access for users with active organizations only
+    - Remove Personal Account from `<OrganizationList/>` and `<OrganizationSwitcher/>`.
+    - Set an active organization with `setActive`.
+    - Limit access for users with active organizations only.
 </TutorialHero>
 
 <Callout type="info">
