feat: Improve scripts

--- a/docs/guides/force-organizations.mdx
+++ b/docs/guides/force-organizations.mdx
@@ -156,7 +156,10 @@ export default authMiddleware({
     ...
     // Redirect logged in users to organization selection page if they are not active in an organization
     if(auth.userId && !auth.orgId && req.nextUrl.pathname !== "/org-selection"){
-      const orgSelection = new URL('/org-selection', req.url)
+      const searchParams = new URLSearchParams({
+        redirectUrl: req.url
+      })
+      const orgSelection = new URL(`/org-selection?${searchParams.toString()}`, req.url);
       return NextResponse.redirect(orgSelection)
     }
     ...
@@ -165,10 +168,12 @@ export default authMiddleware({
 ```
 
 ```tsx filename="app/org-selection/page.tsx"
+"use client"
 import { OrganizationList } from "@clerk/nextjs"
-import { PropsWithChildren } from "react"
+import { useSearchParams } from "next/navigation";
 
-export default function OrganizationSelection(props: PropsWithChildren) {
+export default function OrganizationSelection() {
+  const { get } = useSearchParams()
   return (
     <section>
       <h1>Welcome</h1>
@@ -178,7 +183,11 @@ export default function OrganizationSelection(props: PropsWithChildren) {
         organization, you can accept an invitation or create your own
         organization
       </p>
-      <OrganizationList hidePersonal={true} />  
+      <OrganizationList
+        hidePersonal={true}
+        afterCreateOrganizationUrl={get("redirectUrl") ?? "/"}
+        afterSelectOrganizationUrl={get("redirectUrl") ?? "/"}
+      />
     </section>
   )
 }
