--- a/docs/guides/force-organizations.mdx
+++ b/docs/guides/force-organizations.mdx
@@ -62,15 +62,13 @@ export default function Sidebar() {
     </Tab>
 </Tabs>
 
-### Set an active organization
+### How to set an active organization
 
 <Callout type="info">
     Setting an active organization can only be performed in the client
 </Callout>
 
 With clerk, a user can have many organization memberships. That means they can could have joined both Organization A and Organization B, but only one of them can be active at a time.
-
-A session will always include an organizationId via the [`AuthenticationObject`](/docs/references/nextjs/authentication-object#example-with-active-organization), we can use this in order to [detect](#detect-an-active-organization) if a user has an "active organizations".
 
 Clerk UI Components will automatically set an organization as active each time the user creates an organization, accepts an invitation or selects a membership from the switcher. For custom flows when developers want to set an organization as active you can use the [`setActive`](#) utility
 
@@ -155,13 +153,15 @@ export function SyncActiveOrganization() {
 
 ### Detect an active organization
 
+A session will always include an organizationId via the [`AuthenticationObject`](/docs/references/nextjs/authentication-object#example-with-active-organization), we can use this in order to detect if a user has an "active organization".
+
 <Tabs type="router" items={["App Router Server Component", "App Router Client Component"]}>
     <Tab>
 ```tsx
 import { auth } from '@clerk/nextjs/server'
 
 export default function Layout() {
-  const {orgId} = auth()
+  const { orgId } = auth()
   const hasActiveOrg = orgId !== null
   ...
 }
@@ -174,7 +174,7 @@ export default function Layout() {
 import { useAuth } from '@clerk/nextjs'
 
 export default function Layout() {
-  const {orgId} = useAuth()
+  const { orgId } = useAuth()
   const hasActiveOrg = orgId !== null
   ...
 }
@@ -203,7 +203,7 @@ import { OrganizationList } from "@clerk/nextjs"
 import { auth } from "@clerk/nextjs/server"
 import { PropsWithChildren } from "react"
 
-export default function RequiredActiveOrgLayout(props: {afterCreateOrganizationUrl?: string, afterSelectOrganizationUrl?: string}) {
+export default function RequiredActiveOrgLayout(props: PropsWithChildren) {
   const { orgId } = auth()
 
   if (orgId) {
@@ -219,11 +219,7 @@ export default function RequiredActiveOrgLayout(props: {afterCreateOrganizationU
         organization, you can accept an invitation or create your own
         organization
       </p>
-      <OrganizationList 
-        hidePersonal={true} 
-        afterCreateOrganizationUrl={afterCreateOrganizationUrl}
-        afterSelectOrganizationUrl={afterSelectOrganizationUrl}
-      />  
+      <OrganizationList hidePersonal={true} />
     </section>
   )
 }
