Fix currentUser return type

--- a/docs/references/nextjs/current-user.mdx
+++ b/docs/references/nextjs/current-user.mdx
@@ -5,7 +5,7 @@ description: Access the User object inside of your Server Components, Route Hand
 
 # `currentUser()`
 
-The `currentUser` helper returns the [`User`][user-object] object of the currently active user. This is the same [`User`][user-object] object that is returned by the [`useUser`](/docs/references/react/use-user) hook. However, it can be used in Server Components, Route Handlers, and Server Actions. Under the hood, this helper calls `fetch()` so it is automatically deduped per request.
+The `currentUser` helper returns the [`BAPI User`][user-object] object of the currently active user. However, it can be used in Server Components, Route Handlers, and Server Actions. Under the hood, this helper calls `fetch()` so it is automatically deduped per request.
 
 ```tsx filename="app/page.[jsx/tsx]"
 import { currentUser } from '@clerk/nextjs';
@@ -19,4 +19,4 @@ export default async function Page() {
 }
 ```
 
-[user-object]: /docs/references/javascript/user/user
+[user-object]: https://clerk.com/docs/reference/backend-api/tag/Users#operation/GetUser
