fix typo "Orgnaization"

--- a/docs/integrations/webhooks.mdx
+++ b/docs/integrations/webhooks.mdx
@@ -35,7 +35,7 @@ You can find the Webhook signing secret when you click on the endpoint you creat
 - `organizationMembership.deleted`
 - `organizationMembership.updated`
 
-### Orgnaization Domains
+### Organization Domains
 
 - `organizationDomain.created`
 - `organizationDomain.deleted`
