Fix reference to BAPI

--- a/docs/references/nextjs/current-user.mdx
+++ b/docs/references/nextjs/current-user.mdx
@@ -5,7 +5,7 @@ description: Access the User object inside of your Server Components, Route Hand
 
 # `currentUser()`
 
-The `currentUser` helper returns the [`BAPI User`][user-object] object of the currently active user. However, it can be used in Server Components, Route Handlers, and Server Actions. Under the hood, this helper calls `fetch()` so it is automatically deduped per request.
+The `currentUser` helper returns the [`Backend API User`][user-object] object of the currently active user. However, it can be used in Server Components, Route Handlers, and Server Actions. Under the hood, this helper calls `fetch()` so it is automatically deduped per request.
 
 ```tsx filename="app/page.[jsx/tsx]"
 import { currentUser } from '@clerk/nextjs';
